# Wikikracja-j

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_INSTRUCTIONS.md  DUPLICATE_EMAIL_FIXES.md  Dockerfile  Dockerfile.local_windows  README.md  TODO.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  semantic-release.yml
board/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
board/migrations/: 0007_postcategory_post_category.py
board/static/board/: board.css
board/templates/board/: _post_card.html  archive.html  board.html  create_post.html  edit_post.html  post_detail.html  postcategory_confirm_delete.html  postcategory_form.html  postcategory_list.html
bookkeeping/: apps.py  forms.py  models.py  urls.py  views.py
bookkeeping/templates/bookkeeping/: category_confirm_delete.html  category_form.html  category_list.html  partner_confirm_delete.html  partner_form.html  partner_list.html  report_list.html  transaction_confirm_delete.html  transaction_form.html  transaction_list.html
bookkeeping/templatetags/: bookkeeping_extras.py
chat/: admin.py  apps.py  consumers.py  exceptions.py  forms.py  group_messages.py  models.py  push_api.py  signals.py  urls.py  utils.py  views.py
chat/management/commands/: chat_messages.py  chat_rooms.py  fix_room_permissions.py  fix_room_titles.py
chat/migrations/: 0007_add_message_indexes.py  0008_remove_message_chat_message_room_time_idx.py  0009_room_protected.py  0010_message_reply_to_messagereaction_messagereadby.py  0011_rename_chat_msgreaction_msg_reaction_idx_chat_msgreact_idx.py  0012_room_tracked_by.py
chat/static/chat/css/: chat.css
chat/static/chat/js/: chat-embedded.js  chat.js  domapi.js  dompurify.min.js  handlers.js  notifications.js  push-notifications.js  reconnecting-websocket.js  sw.js  templates.js  utility.js  websocket-manager.js  wsapi.js
chat/templates/chat/: _embedded_chat.html  chat.html  room_link.html
chat/templatetags/: filters.py
elibrary/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
elibrary/templates/elibrary/: add.html  book_detail.html  book_form.html  book_list.html
events/: README.md  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
events/templates/events/: event_confirm_delete.html  event_detail.html  event_form.html  event_list.html
glosowania/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
glosowania/management/commands/: update_chat_room_titles.py  vote.py
glosowania/templates/glosowania/: _card_script.html  _card_styles.html  _proposal_card.html  _view_toggle.html  approved.html  discussion.html  menu.html  parameters.html  proposition.html  referendum.html  rejected.html  szczegoly.html
home/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
home/management/commands/: update_site.py
home/migrations/: 0001_initial.py  0002_alter_readstatus_content_type.py  0003_deleteduser.py  0004_reputationloss.py  0005_remove_deleteduser_deleted_user_deleted_at_idx_and_more.py  0006_onboardingprogress.py  0007_remove_onboardingprogress_step1_read_and_more.py
home/static/home/css/: app.css  (+3 more)
home/templates/home/: activity.html  base.html  home.html  login.html  password_reset_done.html  password_reset_form.html  search.html  site_admin.html
home/templatetags/: feed_filters.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/pl/LC_MESSAGES/: django.mo  django.po
obywatele/: adapter.py  apps.py  auth_backends.py  filters.py  forms.py  managers.py  middleware.py  models.py  signals.py  tables.py  tests.py  urls.py  views.py
obywatele/management/commands/: count_citizens.py
obywatele/migrations/: 0011_alter_uzytkownik_phone.py  0011_remove_duplicate_emails.py  0012_alter_user_email_unique.py  0012_alter_uzytkownik_phone.py  0013_citizenactivity.py  0014_alter_citizenactivity_activity_type.py  0015_alter_citizenactivity_activity_type.py  0016_uzytkownik_avatar.py  0016_uzytkownik_email_notifications_chat_and_more.py  0017_uzytkownik_avatar.py  0018_uzytkownik_language.py  0019_uzytkownik_email_notifications_chat_participated.py
obywatele/templates/obywatele/: _calendar_partial.html  _citizen_aktywnosc_partial.html  _citizen_czaty_partial.html  _citizen_zadania_partial.html  _citizen_zalozono_partial.html  assets.html  change_email.html  change_name.html  change_username.html  citizen_aktywnosc.html  citizen_czaty.html  citizen_zadania.html  dodaj.html  menu.html  my_assets.html  my_profile.html  onboarding_details.html  parameters.html  poczekalnia.html  start.html  szczegoly.html  wspolnota.html
obywatele/templatetags/: profile_tags.py
scripts/: build_docker_localy_on_windows.ps1  start_dev.py
site_settings/: admin.py  models.py
site_settings/migrations/: 0001_initial.py
tasks/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
tasks/management/commands/: backfill_task_chat_rooms.py  fix_task_chat_connections.py
tasks/templates/tasks/: _card_script.html  _task_card.html  _task_cards.html  menu.html  task_detail.html  task_form.html  task_help.html  task_list.html
templates/allauth/account/: account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_from_key.html  password_set.html  signup.html  verification_sent.html
zzz/: apps.py  asgi.py  context_processors.py  routing.py  scheduler.py  settings.py  settings_base.py  urls.py  utils.py
(+6 files in other folders)
