[project]
name = "wikikracja"
version = "0.95.0"
requires-python = ">= 3.14"

[tool.ruff]
line-length = 210
target-version = "py314"
# preview = true
show-fixes = true
# unsafe-fixes = true
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out", "dist", "node_modules", "venv", "migrations"]

[tool.ruff.analyze]
# detect-string-imports = true
# preview = true

[tool.ruff.format]
docstring-code-format = true
# indent-style = "space" # set to tab after first format all files ??
line-ending = "auto"
# set to lf ??
# preview = true
quote-style = "preserve"
# set to double ??  "preserve" now? single
skip-magic-trailing-comma = true

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = ["B"]
# check disabled after 1st format
ignore = ["E501"]
select = ["E4", "E7", "E9", "E", "F", "I", "B", "W", "T"]
#, "Q"]
# preview = true
task-tags = ["TODO", "FIXME", "XXX", "HACK"]
typing-extensions = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
# no-sections = true
split-on-trailing-comma=false

[tool.ruff.lint.isort.import-heading]
future = "Future imports"
standard-library = "Standard library imports"
third-party = "Third party imports"
first-party = "First party imports"
local-folder = "Local folder imports"

[tool.ruff.lint.flake8-type-checking]
#strict = true # ??? usable


[tool.yapf]
COLUMN_LIMIT = 1280
# INDENT_WIDTH = 2 # someday
# SPACES_BEFORE_COMMENT = 1 # someday

# PEP8
ALIGN_CLOSING_BRACKET_WITH_VISUAL_INDENT = false
ALLOW_MULTILINE_DICTIONARY_KEYS = false
ALLOW_MULTILINE_LAMBDAS = false
ALLOW_SPLIT_BEFORE_DEFAULT_OR_NAMED_ASSIGNS = true
ALLOW_SPLIT_BEFORE_DICT_VALUE = true
ARITHMETIC_PRECEDENCE_INDICATION = false
BLANK_LINE_BEFORE_CLASS_DOCSTRING = false
BLANK_LINE_BEFORE_MODULE_DOCSTRING = false
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = false
BLANK_LINES_AROUND_TOP_LEVEL_DEFINITION = 2
BLANK_LINES_BETWEEN_TOP_LEVEL_IMPORTS_AND_VARIABLES = 1
COALESCE_BRACKETS = false
# COLUMN_LIMIT = 79
CONTINUATION_ALIGN_STYLE = 'SPACE'
CONTINUATION_INDENT_WIDTH = 4
# DEDENT_CLOSING_BRACKETS = false # true
# DISABLE_ENDING_COMMA_HEURISTIC = false
DISABLE_SPLIT_LIST_WITH_COMMENT = false
# !!
EACH_DICT_ENTRY_ON_SEPARATE_LINE = true
FORCE_MULTILINE_DICT = true
# !!
I18N_COMMENT = ''
I18N_FUNCTION_CALL = ''
# INDENT_CLOSING_BRACKETS = false
INDENT_DICTIONARY_VALUE = false
INDENT_WIDTH = 4
INDENT_BLANK_LINES = false
JOIN_MULTIPLE_LINES = true
# NO_SPACES_AROUND_SELECTED_BINARY_OPERATORS = set()
SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET = false
# SPACE_INSIDE_BRACKETS = false
# SPACES_AROUND_DEFAULT_OR_NAMED_ASSIGN = false
SPACES_AROUND_DICT_DELIMITERS = false
SPACES_AROUND_LIST_DELIMITERS = false
SPACES_AROUND_POWER_OPERATOR = false
SPACES_AROUND_SUBSCRIPT_COLON = false
# SPACES_AROUND_TUPLE_DELIMITERS = false
SPACES_BEFORE_COMMENT = 2
# SPLIT_ALL_COMMA_SEPARATED_VALUES = false
# SPLIT_ALL_TOP_LEVEL_COMMA_SEPARATED_VALUES = false
SPLIT_ARGUMENTS_WHEN_COMMA_TERMINATED = false
SPLIT_BEFORE_ARITHMETIC_OPERATOR = false
SPLIT_BEFORE_BITWISE_OPERATOR = true
SPLIT_BEFORE_CLOSING_BRACKET = true
SPLIT_BEFORE_DICT_SET_GENERATOR = false
SPLIT_BEFORE_DOT = false
SPLIT_BEFORE_EXPRESSION_AFTER_OPENING_PAREN = false
# !
# SPLIT_BEFORE_FIRST_ARGUMENT = false
# !
SPLIT_BEFORE_LOGICAL_OPERATOR = true
SPLIT_BEFORE_NAMED_ASSIGNS = true
SPLIT_COMPLEX_COMPREHENSION = false
SPLIT_PENALTY_AFTER_OPENING_BRACKET = 300
SPLIT_PENALTY_AFTER_UNARY_OPERATOR = 10000
SPLIT_PENALTY_ARITHMETIC_OPERATOR = 300
SPLIT_PENALTY_BEFORE_IF_EXPR = 0
SPLIT_PENALTY_BITWISE_OPERATOR = 300
SPLIT_PENALTY_COMPREHENSION = 80
SPLIT_PENALTY_EXCESS_CHARACTER = 7000
SPLIT_PENALTY_FOR_ADDED_LINE_SPLIT = 30
SPLIT_PENALTY_IMPORT_NAMES = 0
SPLIT_PENALTY_LOGICAL_OPERATOR = 300
# USE_TABS = false

# Google : PEP8
# ALIGN_CLOSING_BRACKET_WITH_VISUAL_INDENT = false
# COLUMN_LIMIT = 80
# INDENT_DICTIONARY_VALUE = true
# INDENT_WIDTH = 4
# I18N_COMMENT = r'#\..*'
# I18N_FUNCTION_CALL = ['N_', '_']
# JOIN_MULTIPLE_LINES = false
# SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET = false
# SPLIT_BEFORE_BITWISE_OPERATOR = false
# SPLIT_BEFORE_DICT_SET_GENERATOR = false
# SPLIT_BEFORE_LOGICAL_OPERATOR = false
# SPLIT_COMPLEX_COMPREHENSION = true
# SPLIT_PENALTY_COMPREHENSION = 2100

# YAPF : Google
# ALLOW_MULTILINE_DICTIONARY_KEYS = true
# ALLOW_SPLIT_BEFORE_DEFAULT_OR_NAMED_ASSIGNS = false
# INDENT_WIDTH = 2
# SPLIT_BEFORE_BITWISE_OPERATOR = true
# SPLIT_BEFORE_DOT = true
# SPLIT_BEFORE_EXPRESSION_AFTER_OPENING_PAREN = true

# Facebook : PEP8
# ALIGN_CLOSING_BRACKET_WITH_VISUAL_INDENT = false
# BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = false
# COLUMN_LIMIT = 80
DEDENT_CLOSING_BRACKETS = true
# INDENT_CLOSING_BRACKETS = false
# INDENT_DICTIONARY_VALUE = true
# JOIN_MULTIPLE_LINES = false
# SPACES_BEFORE_COMMENT = 2
# SPLIT_PENALTY_AFTER_OPENING_BRACKET = 0
# SPLIT_PENALTY_BEFORE_IF_EXPR = 30
# SPLIT_PENALTY_FOR_ADDED_LINE_SPLIT = 30
# SPLIT_BEFORE_BITWISE_OPERATOR = false
# SPLIT_BEFORE_LOGICAL_OPERATOR = false

[tool.yapfignore]
ignore_patterns = [
  "*venv*",
  "**/migrations/**",
  "temp/**/*.py",
  "legacy/*.py"
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = false
